--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h1 class="minecraft-server-ip">lafinca.tk</h1>
                 </div>
                 <p class="server-description">
-                    Servidor multijugador RPG con mapa de real del mundo.
+                    Servidor multijugador RPG con mapa real del mundo.
                     <br><br>Unete ahora y juega!
                 </p>
                 <div class="buttons">
@@ -64,7 +64,7 @@
 
                 <div class="stats">
                     <div class="stat">
-                        <div class="icon" onclick="window.location='https://discord.io/LaFincaSv';">
+                        <div class="icon" onclick="window.location='https://discord.com/invite/NM6AAxHR?utm_source=Discord%20Widget&utm_medium=Connect';">
                             <i class="fa-brands fa-discord"></i>
                         </div>
                         <div class="texts">
@@ -144,7 +144,7 @@
     <section id="discord">
         <div class="content">
             <h2 class="section-title">¿Tienes un <span>problema</span> o quieres estar con otros? <br> Unete al <span>Discord!</span></h2>
-            <a href="http://discord.io/Fincasv" class="discord-link"><button class="join-discord">Unete a discord</button></a>
+            <a href="https://discord.com/invite/NM6AAxHR?utm_source=Discord%20Widget&utm_medium=Connect" class="discord-link"><button class="join-discord">Unete a discord</button></a>
 			<div class="texts">
 				<iframe src="https://discord.com/widget?id=660596096447545356&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 			</div>
@@ -157,7 +157,7 @@
         <div class="social-links">
             <a href="#" class="link tiktok-link"><i class="fa-brands fa-tiktok"></i></a>
             <a href="#" class="link instagram-link"><i class="fa-brands fa-square-instagram"></i></a>
-            <a href="https://discord.io/LaFincaSv" class="link discord-link-footer"><i class="fa-brands fa-discord"></i></a>
+            <a href="https://discord.com/invite/NM6AAxHR?utm_source=Discord%20Widget&utm_medium=Connect" class="link discord-link-footer"><i class="fa-brands fa-discord"></i></a>
         </div>
     </footer>
 </body>
